# geant4-python-application

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.binder/: Dockerfile  environment.yaml  postBuild
.github/: dependabot.yaml
.github/workflows/: binder.yaml  binder.yml  build-test-new.yaml  build-test-static.yaml  build-test.yaml  build-test.yml  docker.yaml  docker.yml  packaging.yaml  semantic-pr-title.yaml  test.yml  wheels.yaml
application/: CMakeLists.txt  setup.py
application/include/geant4/: ActionInitialization.h  Application.h  DataModel.h  DetectorConstruction.h  EventAction.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  RunManager.h  SensitiveDetector.h  StackingAction.h  SteppingAction.h  SteppingVerbose.h  TrackingAction.h
application/src/: ActionInitialization.cpp  Application.cpp  DetectorConstruction.cpp  EventAction.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  RunManager.cpp  SensitiveDetector.cpp  StackingAction.cpp  SteppingAction.cpp  TrackingAction.cpp
application/src/geant4/: ActionInitialization.cpp  Application.cpp  DataModel.cpp  DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  StackingAction.cpp  SteppingAction.cpp  SteppingVerbose.cpp  TrackingAction.cpp
application/src/python/: module.cpp
application/tests/: CMakeLists.txt  testApplication.cpp
binder/: Dockerfile
conda_recipe/: build.sh  meta.yaml
dev/: Dockerfile
examples/: attenuation.ipynb  example.ipynb
include/geant4/: Application.h  DataModel.h  DetectorConstruction.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  SensitiveDetector.h  StackingAction.h  SteppingAction.h  SteppingVerbose.h  TrackingAction.h
src/geant4/: ActionInitialization.cpp  Application.cpp  DetectorConstruction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  SensitiveDetector.cpp  SteppingVerbose.cpp  __init__.py
src/geant4_application/include/geant4_application/: ActionInitialization.h  Application.h  DataModel.h  DetectorConstruction.h  EventAction.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  StackingAction.h  SteppingAction.h  SteppingVerbose.h  TrackingAction.h
src/geant4_application/src/: ActionInitialization.cpp  Application.cpp  DataModel.cpp  DetectorConstruction.cpp  EventAction.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SensitiveDetector.cpp  StackingAction.cpp  SteppingAction.cpp  SteppingVerbose.cpp  TrackingAction.cpp
src/geant4_python_application/: __init__.py  application.py  datasets.py  detector.py  events.py  gdml.py  physics.py
src/geant4_python_application/files/: 2datasets.py  alt_datasets.py  datasets.py  directories.py  old_datasets.py
src/python/: module.cpp
tests/: conftest.py  test_analysis.py  test_application.py  test_module.py  test_run.py  test_run_0.py  test_run_1.py  test_run_2.py  test_run_3.py
